Added the tab icon to the remaining templates

--- a/my_django_app/customer/Templates/Customer/error.html
+++ b/my_django_app/customer/Templates/Customer/error.html
@@ -15,9 +15,6 @@
 
         <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/error.css">
 
-
-
-
         <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/dark.css">
         <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/dark1.css">
         <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/light.css">
@@ -27,11 +24,8 @@
         <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/prismjs.bundle.css">
         <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/style.bundle.css">
 
-
-
-
-
-            </head>
+        <link rel="shortcut icon" href="https://majdalkawaas.github.io/static/customer/Blue_sqrs.png"/>
+    </head>
     <!--end::Head-->
 
     <!--begin::Body-->
