--- a/my_django_app/customer/Templates/Customer/registration/forgot.html
+++ b/my_django_app/customer/Templates/Customer/registration/forgot.html
@@ -21,6 +21,7 @@
     <!--begin::Fonts-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700"/> 
     <!--end::Fonts-->
+    <link rel="shortcut icon" href="https://majdalkawaas.github.io/static/customer/Blue_sqrs.png"/>
 
 
 </head>
