--- a/my_django_app/guest/Templates/Guest/guest.html
+++ b/my_django_app/guest/Templates/Guest/guest.html
@@ -22,6 +22,8 @@
     <link rel="stylesheet" href="https://majdalkawaas.github.io/static/guest/light1.css">
     <!--end::Layout Themes-->
 
+	<link rel="shortcut icon" href="https://majdalkawaas.github.io/static/customer/Blue_sqrs.png"/>
+
 </head>
 
 <!--end::Head-->
