--- a/my_django_app/guest/Templates/Guest/waitingPage.html
+++ b/my_django_app/guest/Templates/Guest/waitingPage.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="https://majdalkawaas.github.io/static/guest/light.css">
     <link rel="stylesheet" href="https://majdalkawaas.github.io/static/guest/light1.css">
     <!--end::Layout Themes-->
+    <link rel="shortcut icon" href="https://majdalkawaas.github.io/static/customer/Blue_sqrs.png"/>
 
     <style>
                 .ml-1 
