--- a/my_django_app/customer/Templates/Customer/registration/password_reset_confirm.html
+++ b/my_django_app/customer/Templates/Customer/registration/password_reset_confirm.html
@@ -17,13 +17,11 @@
     <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/prismjs.bundle.css">
     <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/style.bundle.css">
 
-    
-
-
-
     <!--begin::Fonts-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700"/> 
     <!--end::Fonts-->
+
+    <link rel="shortcut icon" href="https://majdalkawaas.github.io/static/customer/Blue_sqrs.png"/>
 
 </head>
 <!--end::Head-->
