--- a/my_django_app/customer/Templates/Customer/registration/password_reset_done.html
+++ b/my_django_app/customer/Templates/Customer/registration/password_reset_done.html
@@ -22,7 +22,7 @@
         <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/prismjs.bundle.css">
         <link rel="stylesheet" href="https://majdalkawaas.github.io/static/customer/style.bundle.css">
                    
-
+        <link rel="shortcut icon" href="https://majdalkawaas.github.io/static/customer/Blue_sqrs.png"/>
             </head>
     <!--end::Head-->
 
