Update the review page at the end to display the information dynamically

--- a/my_django_app/customer/Templates/Customer/queueOperatorSignup.html
+++ b/my_django_app/customer/Templates/Customer/queueOperatorSignup.html
@@ -128,7 +128,7 @@
                             <h3 class="font-weight-bolder text-dark display5">Create Account</h3>
                             <div class="text-muted font-weight-bold font-size-h4">
                                 Already have an Account ?
-                                <a href="customer/pages/login/login-3/signin.html" class="text-primary font-weight-bolder">Sign In</a>
+                                <a href="{% url 'signin-customer-page' %}" class="text-primary font-weight-bolder">Sign In</a>
                             </div>
                         </div>
                         <!--begin::Title-->
@@ -206,6 +206,31 @@
                                 Complete Your Signup And Become A Member!
                             </div>
                         </div>
+                        <script>
+                            document.getElementById("id_first_name").onchange = function(){
+                                var temp = document.getElementById("id_first_name").value;
+                                document.getElementById("firstName").innerHTML = `First Name: ${temp}`;
+                            }
+                            document.getElementById("id_last_name").onchange = function(){
+                                var temp1 = document.getElementById("id_last_name").value;
+                                document.getElementById("lastName").innerHTML = `Last Name: ${temp1}`;
+                            }
+                            document.getElementById("id_username").onchange = function(){
+                                var temp2 = document.getElementById("id_username").value;
+                                document.getElementById("username").innerHTML = `Username: ${temp2}`;
+                            }
+                            
+                            document.getElementById("id_email").onchange = function(){
+                                var temp3 = document.getElementById("id_email").value;
+                                document.getElementById("email").innerHTML = `Email Address: ${temp3}`;
+                            }
+                            
+                            // document.getElementById("id_customer_list").onchange = function(){
+                            //     var temp4 = document.getElementById("id_customer_list").value;
+                            //     document.getElementById("customer").innerHTML = `Customer: ${temp4}`;
+
+                            // }
+                        </script>
                         <!--end::Title-->
 
                         <!--begin::Section-->
@@ -213,32 +238,14 @@
                             Account Settings:
                         </h4>
                         <div class="text-dark-50 font-weight-bold line-height-lg mb-8">
-                            <div>Nick Stone</div>
-                            <div>+12233434-34</div>
-                            <div>nick.stone@gmail.com</div>
+                            <div id="firstName"></div>
+                            <div id="lastName"></div>
+                            <div id="username"></div>
+                            <div id="email"></div>
                         </div>
                         <!--end::Section-->
 
-                        <!--begin::Section-->
-                        <h4 class="font-weight-bolder mb-3">
-                            Address Details:
-                        </h4>
-                        <div class="text-dark-50 font-weight-bold line-height-lg mb-8">
-                            <div>Address Line 1</div>
-                            <div>Address Line 2</div>
-                            <div>Melbourne 3000, VIC, Australia</div>
-                        </div>
-                        <!--end::Section-->
-
-                        <!--begin::Section-->
-                        <h4 class="font-weight-bolder mb-3">
-                            Support Channels:
-                        </h4>
-                        <div class="text-dark-50 font-weight-bold line-height-lg mb-8">
-                            <div>Overnight Delivery with Regular Packaging</div>
-                            <div>Preferred Morning (8:00AM - 11:00AM) Delivery</div>
-                        </div>
-                        <!--end::Section-->
+                        
                     </div>
                     <!--end: Wizard Step 3-->
 
