--- a/my_django_app/customer/Templates/Customer/queueManagement.html
+++ b/my_django_app/customer/Templates/Customer/queueManagement.html
@@ -190,7 +190,9 @@
 											<a href="queueSetup">
 												<button style="float: right; position: relative; top: 20px;" type="button" class="btn btn-primary">Create new queues</button>
 											</a>
-											
+											<a href="{% url 'pdf-file' %}" target="_blank">
+												<button style="float: right; position: relative; top: 20px;" type="button" class="btn btn-primary">Open QRcode</button>
+											</a>
 										</div>
 
 										<div class="tab-pane fade" id="messages">
