--- a/my_django_app/customer/Templates/Customer/queueOperator.html
+++ b/my_django_app/customer/Templates/Customer/queueOperator.html
@@ -34,7 +34,14 @@
 
 	<link rel="shortcut icon" href="https://majdalkawaas.github.io/static/'customer/Blue_sqrs.png"/>
 
+# 	<script>
+#     window.setInterval('refresh()', 60000); 	// Call a function every 10000 milliseconds (OR 10 seconds).
 
+#     // Refresh or reload page.
+#     function refresh() {
+#         window .location.reload();
+#     }
+# </script>
 </head>
 <!--end::Head-->
 <!--begin::Body-->
@@ -342,10 +349,6 @@
 				}
 			}
 		}
-
-
-
-
 
 		$('#example1').DataTable({
 			"aoColumnDefs" :[
