--- a/my_django_app/customer/Templates/Customer/signin.html
+++ b/my_django_app/customer/Templates/Customer/signin.html
@@ -36,7 +36,7 @@
             <div class="login-aside d-flex flex-column flex-row-auto">
                 <!--begin::Aside Bottom-->
                 <div class="aside-img d-flex flex-row-fluid bgi-no-repeat bgi-position-x-center"
-                    style=" background-image: url({%static 'customer/Siginin_left.png' %}); background-size: cover ;" >
+                    style=" background-image: url(https://majdalkawaas.github.io/static/customer/Siginin_left.png); background-size: cover ;" >
                 </div>
                 <!--end::Aside Bottom-->
             </div>
